pmd issues fix